--- a/pagina-cajas/cajas.html
+++ b/pagina-cajas/cajas.html
@@ -18,8 +18,8 @@
 
 <body class="bg-gradient-to-r to-gray-400 from-indigo-300 " >
    <div class="shadow-xl bg-white  p-2  flex">
-    <div class="flex-1 hover:bg-gray-200 rounded w-10"> <p class="text-center mt-2 ">App</p></div>
-    <div class="mr-40 hover:bg-gray-200   rounded "> <p class="p-2">Como estas</p></div>
+    <div class="flex-1 hover:bg-gray-200 w-40 rounded  hover:scale-125 duration-300 delay-150 transitiion"> <p class="text-center mt-2 "><a href="../index.html">Ir al indice</a>  </p></div>
+    <div class="mr-40 hover:bg-gray-200   rounded "> <p class="p-2">Bienvenido usuario</p></div>
    </div>
     <h1 class="text-center text-3xl font-bold text-red-900 mb-10 "> EJEMPLO</h1>
  <div class="bg-[url(./mono2.jpg)] bg-no-repeat bg-cover m-auto w-9/12 rounded shadow-lg bg-fixed mb-4 ">
