--- a/pagina-gato/index.html
+++ b/pagina-gato/index.html
@@ -13,9 +13,8 @@
 
 <div class="navbar flex item-center justify-center gap-10">
       <img src="logotigre.svg" class="w-20 h-20 rounded flex flex-row  duration-150"  alt="tigre">
-    <button class="btn "><a href="#"> Home</button>
-        <button class="btn"><a href="#"> Contact</button>
-            <button class="btn"><a href="#"> About</button>
+    <button class="btn "><a href="../index.html">Indice</button>
+        
 <h1 class="text-4xl text-white hover:text-black font-mono" >Bienvenido </h1>
 </div> <br>
 <div class="flex item-center justify-center">
