--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>Paginas-web</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    <div class="flex gap-10 m-auto w-80 mt-20">
+<body >
+    <div class="flex gap-10 bg-base-100 m-auto w-80 mt-20 grid grid-cols-1 text-white  max-[378px]:bg-black text-center p-8">
     Indice 
-<a href="./pagina-gato/index.html"><button class="btn bg-black text-white rounded w-20 h-10">Gatos</button></a>
-<a href="./pagina-tabla/index.html"><button class="btn bg-black text-white rounded w-20 h-10">Tablas</button></a>
-    <a href="./pagina-cajas/cajas.html"><button class="btn bg-black text-white rounded w-20 h-10">Cajas</button></a>
+<a href="./pagina-gato/index.html"><button class="btn bg-white border shadow-lg border-2 text-black rounded hover:scale-125 duration-300 delay-150 transitiion w-20 h-10">Gatos</button></a>
+<a href="./pagina-tabla/index.html"><button class="btn bg-white border-2 shadow-lg text-black rounded hover:scale-125 duration-300 delay-150 transitiion w-20 h-10">Tablas</button></a>
+    <a href="./pagina-cajas/cajas.html"><button class="btn bg-white border border-2 shadow-lg text-black rounded hover:scale-125 duration-300 delay-150 transitiion w-20 h-10">Cajas</button></a>
 </div>
+
 </body>
 </html>
