--- a/pagina-tabla/index.html
+++ b/pagina-tabla/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body class="">
-    <div class="border w-80 m-auto mt-40 p-20 rounded-xl shadow-xl hover:scale-125 transition duration">
+    <div class="border w-80 m-auto mt-40 p-20 rounded-xl ">
         <h1 class="text-center text-black text-2xl mt-10 font-bold ">Hola mundo</h1>
+        <button class="m-auto mt-10 ml-10 bg-gray-300 rounded text-black w-20 px-4 py-2 border-base-100 border-2 shadow-xl hover:scale-125 transition duration"><a href="../index.html">Indice</a></button>
     </div>
 <div class="h-screen">
-    <table class="w-80 m-auto mt-20">
+    <table class="ml-96 mt-20">
         <tr >
             <td class=" border-black h-20 border "></td>
             <td colspan="3" class="border  border-black"><img src="./img/mp3_pequeno_blanco.png" alt="foto"> <img src="./img/mp3_pequeno_negro.png" alt="foto">  Mini</td>
