--- a/pagina-gato/index.html
+++ b/pagina-gato/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@2.51.3/dist/full.css" rel="stylesheet" type="text/css" />
     <title>Document</title>
 </head>
-<body class="bg-gradient-to-r from-yellow-700 to-indigo-700 ">
+<body class="bg-gradient-to-r from-yellow-700 to-indigo-700 max-[378px]:w-96 max-[378px]:grid-cols-1">
     
 
 <div class="navbar flex item-center justify-center gap-10">
