--- a/pagina-cajas/cajas.html
+++ b/pagina-cajas/cajas.html
@@ -18,24 +18,24 @@
 
 <body class="bg-gradient-to-r to-gray-400 from-indigo-300 " >
    <div class="shadow-xl bg-white  p-2  flex">
-    <div class="flex-1 hover:bg-gray-200 w-40 rounded  hover:scale-125 duration-300 delay-150 transitiion"> <p class="text-center mt-2 "><a href="../index.html">Ir al indice</a>  </p></div>
+    <div class=" hover:bg-gray-200 w-40 rounded  hover:scale-125 duration-300 delay-150 transitiion"> <p class="text-center mt-2 "><a href="../index.html">Ir al indice</a>  </p></div>
     <div class="mr-40 hover:bg-gray-200   rounded "> <p class="p-2">Bienvenido usuario</p></div>
    </div>
     <h1 class="text-center text-3xl font-bold text-red-900 mb-10 "> EJEMPLO</h1>
- <div class="bg-[url(./mono2.jpg)] bg-no-repeat bg-cover m-auto w-9/12 rounded shadow-lg bg-fixed mb-4 ">
+ <div class="bg-[url(./mono2.jpg)] bg-no-repeat bg-cover   w-full rounded shadow-lg bg-fixed mb-4 ">
   
 
-            <div  class="mb-20 p-4 " >
+            <div  class="mb-20 p-4  " >
             
 
-                    <h2 class=" hover:text-white text-center text-3xl hover:scale-125 duration-300  delay-150 font-mono font-bold  "> Párrafo 1</h2>
-                    <p class=" text-center w-96 m-auto rounded-lg p-4 mt-20 text-white bg-gradient-to-r from-cyan-800 to-indigo-500 shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                    <h2 class=" hover:text-white  opacity-75 text-3xl m-20 font-mono font-bold  "> Párrafo 1</h2>
+                    <p class="  w-96  rounded-lg p-4 mt-20 text-black font-bold shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     </p>
             </div>
-            <h2 class="text-center text-3xl hover:scale-125 duration-300  delay-150 font-mono hover:text-green-900 font-bold mt-10"> Párrafo 2</h2>
-            <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-white bg-gradient-to-r from-red-800 to-orange-900 shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+            <h2 class="text-center bg-black p-4 text-3xl hover:scale-125 duration-300  delay-150 font-mono hover:text-green-900 font-bold mt-10 text-white w-64 m-auto rounded-lg"> Párrafo 2</h2>
+            <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-white  shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                 book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
                 recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
@@ -44,14 +44,14 @@
             <div >
                 
                     <h2 class="text-center text-3xl hover:scale-125 duration-300  delay-150 font-mono font-bold hover:text-red-700 mt-10"> Párrafo 3</h2>
-                    <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-white bg-gradient-to-r from-gray-700 to-indigo-900 shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
+                    <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-white  shadow-xl hover:scale-125 duration-300 delay-150 transition">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type
                         specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum
                         passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
                     </p>
             </div>
             <div class="mb-10">
             <h2 class="text-center text-3xl hover:scale-125 duration-300  delay-150 font-mono hover:text-sky-700 font-bold mt-10"> Párrafo 4</h2>
-            <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-white bg-black shadow-xl hover:scale-125 duration-300 delay-150 transition ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+            <p class="text-center w-96 m-auto rounded-lg p-4 mt-20 text-black font-extrabold text-2xl  shadow-xl hover:scale-125 duration-300 delay-150 transition ">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
                 book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
                 recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
             </p>
