--- a/pagina-tabla/index.html
+++ b/pagina-tabla/index.html
@@ -12,6 +12,7 @@
 <body class="">
     <div class="border w-80 m-auto mt-40 p-20 rounded-xl ">
         <h1 class="text-center text-black text-2xl mt-10 font-bold ">Hola mundo</h1>
+       <button class="m-auto mt-10 ml-10 bg-gray-300 rounded text-black w-20 px-4 py-2 border-base-100 border-2 shadow-xl hover:scale-125 transition duration"><a href="../tablas/index.html"> Atras</a></button>
         <button class="m-auto mt-10 ml-10 bg-gray-300 rounded text-black w-20 px-4 py-2 border-base-100 border-2 shadow-xl hover:scale-125 transition duration"><a href="../index.html">Indice</a></button>
     </div>
 <div class="h-screen">
