--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 <div class="flex flex-col w-auto gap-36  h-full lg:flex-row  ">
   <div class="w-72  text-white font-bold h-full ">
  
-    <ul class="border p-2 border-sky-900 shadow-xl shadow-black glass text-black bg-opacity-80 grid flex-grow h-full w-auto  place-items-center">
-    <li class="glass hover:bg-transparent border shadow-lg  hover:scale-125 transition duration-300 delay-150   p-3  w-10/12 text-center rounded-xl text-3xl "><a>Animaciones</a></li>
-    <li class="glass hover:bg-transparent border shadow-xl   hover:scale-125 transition duration-300 delay-150 p-3 w-10/12 text-center rounded-xl text-3xl"><a>Cajas</a></li>
-    <li class="glass hover:bg-transparent border shadow-xl   hover:scale-125 transition duration-300 delay-150  p-3  w-10/12 text-center rounded-xl text-3xl"><a>Tablas</a></li>
+    <ul class="border p-2 border-sky-900 shadow-xl shadow-black glass text-sky-900 bg-opacity-80 grid flex-grow h-full w-auto  place-items-center">
+    <li class="glass hover:bg-transparent border shadow-lg shadow-sky-900  hover:scale-125 transition duration-300 delay-150   p-3  w-10/12 text-center rounded-xl text-3xl "><a>Animaciones</a></li>
+    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150 p-3 w-10/12 text-center rounded-xl text-3xl"><a>Cajas</a></li>
+    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150  p-3  w-10/12 text-center rounded-xl text-3xl"><a>Tablas</a></li>
   </ul>
 
 </div>
