--- a/index.html
+++ b/index.html
@@ -16,29 +16,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 
-<body class="h-screen   ">
+<body class="h-screen">
+ 
   <video  autoplay loop muted>  
   <source src="https://assets.mixkit.co/videos/preview/mixkit-artist-mixing-paint-on-a-palette-41611-large.mp4" type="video/mp4">
 </video>
-  
-<div class="flex flex-col w-auto gap-36  h-full lg:flex-row  ">
-  <div class="w-72  text-white font-bold h-full ">
  
+<div class="flex flex-col w-auto gap-36  h-full lg:flex-row  ">
+  
+  <div class="w-72  text-white font-bold h-full ">
+    
     <ul class="border p-2 border-sky-900 shadow-xl shadow-sky-900 glass text-sky-900 bg-opacity-80 grid flex-grow h-full w-auto  place-items-center">
-    <li class="glass hover:bg-transparent border shadow-lg shadow-sky-900  hover:scale-125 transition duration-300 delay-150   p-3  w-10/12 text-center rounded-xl text-3xl "><a>Animaciones</a></li>
-    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150 p-3 w-10/12 text-center rounded-xl text-3xl"><a>Cajas</a></li>
-    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150  p-3  w-10/12 text-center rounded-xl text-3xl"><a>Tablas</a></li>
+      <div class=" flex gap-5 ">
+       <a href="https://github.com/LucioSchiavoni"> <img src="./github.png" class="w-8 hover:scale-125 transition delay-150 duration-300" alt="github"></a>
+      <a href="https://www.linkedin.com/in/lucio-schiavoni-a67a82238/">  <img src="./linkedin.png" class="w-8 hover:scale-125 transition delay-150 duration-300" alt=""></a>
+      </div>
+      <li class="glass hover:bg-transparent border shadow-lg shadow-sky-900  hover:scale-125 transition duration-300 delay-150   p-3  w-10/12 text-center rounded-xl text-3xl "><a href="https://github.com/LucioSchiavoni/web-utu.git">Repositorio</a></li>
+    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150 p-3 w-10/12 text-center rounded-xl text-3xl"><a href="https://enigmaeng.github.io/Enigma-Engineers-Page/">Nosotros</a></li>
+    <li class="glass hover:bg-transparent border shadow-xl shadow-sky-900  hover:scale-125 transition duration-300 delay-150  p-3  w-10/12 text-center rounded-xl text-3xl"><a href="https://react-tienda.vercel.app/">Ultimo proyecto</a></li>
   </ul>
 
 </div>
 
 <div class="grid-cols-1 content">
+
     <aside class="flex mb-20">
       <img src="./pagina-gato/gato.JPG" class="rounded-full border hover:scale-125 transition duration-300 delay-150  w-40 shadow-black shadow-xl  mt-20 " alt="">
       <p class="text-center text-5xl mt-20 ml-10"> 👋</p>
      <h1 class="p-4 text-6xl text-center w-full mt-10 mb-20 font-google bg-gradient-to-r from-white to-white bg-clip-text text-transparent animate-gradient"><span id="element"></span></h1>
    
   </aside>
+  
      <div class="grid grid-cols-3  gap-10 text-center">
     
      <div class="w-80 mt-10 ">
