--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <body class="h-screen">
  
   <video  autoplay loop muted>  
-  <source src="https://assets.mixkit.co/videos/preview/mixkit-autumn-forest-below-as-a-drone-flies-overhead-45614-large.mp4" type="video/mp4">
+  <source src="https://assets.mixkit.co/videos/preview/mixkit-computer-hacker-logging-a-website-with-code-47321-large.mp4" type="video/mp4">
 </video>
  
 <div class="flex flex-col w-auto gap-36  h-full lg:flex-row  ">
   
   <div class="w-72  text-white font-bold h-full ">
     
-    <ul class="border p-2 border-sky-900 shadow-xl shadow-sky-900 glass text-sky-900 bg-opacity-80 grid flex-grow h-full w-auto  place-items-center">
+    <ul class="border p-2 border-sky-900 shadow-xl shadow-sky-900 glass text-white bg-opacity-80 grid flex-grow h-full w-auto  place-items-center">
       <div class=" flex gap-5 ">
        <a href="https://github.com/LucioSchiavoni"> <img src="./github.png" class="w-8 hover:scale-125 transition delay-150 duration-300" alt="github"></a>
       <a href="https://www.linkedin.com/in/lucio-schiavoni-a67a82238/">  <img src="./linkedin.png" class="w-8 hover:scale-125 transition delay-150 duration-300" alt=""></a>
