--- a/index.html
+++ b/index.html
@@ -17,11 +17,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
 
-<body class="h-screen ">
- 
-  <video  autoplay loop muted>  
-  <source src="https://vod-progressive.akamaized.net/exp=1685183261~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F2801%2F15%2F389009390%2F1642599867.mp4~hmac=ab1b87eff71d2e844557ff8f8ed4244051538b33a04c7b9f415189abee703c91/vimeo-prod-skyfire-std-us/01/2801/15/389009390/1642599867.mp4?filename=file.mp4" type="video/mp4">
-</video>
+<body class="h-screen bg-[url(https://i.pinimg.com/originals/73/6c/a3/736ca32dff9564696d7d5daad75d1954.jpg)]">
+
  
 <div class="flex flex-col w-auto gap-36  h-full lg:flex-row">
   
